<resources>
    <string name="app_name">RoutingAlgorithmVisualizer</string>
    <string name="number_of_vertices">Vertices Number :</string>
    <string name="draw">Draw</string>
    <string name="choose_the_source">Source :</string>
    <string name="find_max_bandwidth">Find Max Bandwidth</string>
    <string name="show_path">Show Path</string>
    <string name="choose_the_destination">Destination :</string>
    <string name="about">About</string>
</resources>
